fixing layout issues

--- a/public/src/app/main-content/languages/languages.component.css
+++ b/public/src/app/main-content/languages/languages.component.css
@@ -9,7 +9,7 @@ h1, h2 {
 
 .container {
   width: 100%;
-  height: 75vh;
+  height: auto;
   min-height: 600px;
   display: flex;
   justify-content: center;
@@ -29,6 +29,7 @@ h1, h2 {
   position: relative;
   overflow: hidden;
   color: #272f38;
+  min-height: 600px;
 }
 
 
@@ -55,6 +56,7 @@ h1, h2 {
   color: #0b76db;
   flex-shrink: 3;
   position: relative;
+  max-height: 60px;
 }
 
 .box:hover {
@@ -128,7 +130,6 @@ h1, h2 {
 
 @media only screen and (max-width: 370px){
   .container {
-    height: 140vh;
     flex-direction: column;
   }
 
@@ -188,7 +189,7 @@ h1, h2 {
 }
 @media only screen and (min-width: 371px){
   .container {
-    height: 140vh;
+    height: auto;
     flex-direction: column;
   }
 
@@ -248,7 +249,7 @@ h1, h2 {
 }
 @media only screen and (min-width: 600px){
   .container {
-    height: 140vh;
+    height: auto;
     flex-direction: column;
   }
 
